# iil-enrichment

./: .gitignore  CHANGELOG.md  CORE_CONTEXT.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.windsurf/rules/: project-facts.md
docs/reference/: api.md  config.md  models.md
enrichment/: __init__.py  _http.py  config.py  ghs.py  provider.py  registry.py  types.py
enrichment/django/: __init__.py  mixins.py
enrichment/providers/: __init__.py  _base.py  gestis.py  pubchem.py
tests/: test_gestis_provider.py  test_ghs.py  test_http.py  test_pubchem_provider.py  test_registry.py  test_types.py
